Fixed Hex Pattern

--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -97,10 +97,11 @@
                 id="changeColor"
                 class="form-control"
                 placeholder="#background color"
+                required
               />
             </div>
             <div class="col-auto">
-              <select id="changeTextSize" class="form-select">
+              <select id="changeTextSize" class="form-select" required>
                 <option disabled selected>Text Size</option>
                 <option value="xx-large">Large</option>
                 <option value="large">Medium</option>
